partially fixed spacing for navbar

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,7 +20,7 @@
 	align-items: center;
 	z-index: -1;
 	.nav-item{
-	padding-left: 0 !important;
+	padding-right: 0 !important;
 	text-decoration: none;
 		a {
 			text-decoration: none !important;
